syntax = "proto3";

package gateway;

service RtcInterface {
    rpc CloseStream (StreamInfo) returns (ReplyInfo);
}

message StreamInfo {
    string key = 1;
}

message ReplyInfo {
    uint64 errCode = 1;
    string errMsg = 2;
}
